[project]
name = "layoutreader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepspeed>=0.18.2",
    "loguru>=0.7.3",
    "nltk>=3.9.2",
    "opencv-python>=4",
    "rich>=14.2.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "typer>=0.20.0",
]
